navigation mobile fixes

--- a/src/css/layout/navigation.css
+++ b/src/css/layout/navigation.css
@@ -4,29 +4,33 @@
     @apply container flex justify-between items-center p-4;
 
     &__brand {
-        @apply flex items-center w-full sm:w-auto sm:justify-start; /* Añade sm:justify-start */
+        @apply flex items-baseline w-full sm:w-auto sm:justify-start;
 
         &-name {
-            @apply  bg-gradient-to-r from-lawn-green  to-turquoise text-transparent bg-clip-text;
-            @apply font-bold text-5xl mx-auto sm:mx-0 sm:text-left; /* Centrado en móvil, alineado a la izquierda en desktop */
+            @apply bg-clip-text text-transparent;
+            background-image: linear-gradient(90deg, #7af42a 44%, #2ae8c4 100%);
+            @apply font-bold text-5xl mx-auto sm:mx-0 sm:text-left;
             line-height: 1.3;
-        }
-
-        &__toggle-icon {
-            @apply text-3xl sm:hidden;
-        }
-        
+          }
     }
+
     &__toggle {
-        @apply sm:hidden relative order-first; /* Coloca el toggle primero en el orden de los elementos */
+        @apply sm:hidden relative order-first p-2;
+
+        &-icon {
+            @apply text-2xl sm:text-3xl;
+        }
     }
 
     &__links {
-        @apply flex-col md:flex md:flex-row md:space-x-4;
-        @apply hidden md:flex; /* Oculta los enlaces en dispositivos móviles por defecto */
+        @apply hidden md:flex md:flex-row md:space-x-4;
 
         &-link {
-            @apply text-french-gray p-2 md:p-0; /* Añade padding en móviles */
+            @apply text-french-gray p-2 transition-colors duration-200;
+
+            &:hover, &:focus {
+                @apply text-white;
+            }
 
             &--active {
                 @apply text-lawn-green;
@@ -36,5 +40,18 @@
 
     &__language {
         @apply text-french-gray;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    .navbar {
+        @apply bg-gunmetal;
+
+
+        &__links-link {
+            &:hover, &:focus {
+                @apply text-lawn-green;
+            }
+        }
     }
 }
